# Doxa

./: .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE-MIT  README.md  cspell.json  docker-compose.yml  rustc-ice-2026-03-24T22_13_46-390350.txt  rustfmt.toml
doxa-client/: AGENTS.md  Cargo.toml  README.md
doxa-client/src/: account.rs  ecgfp5.rs  lib.rs  note.rs  pool_config.rs  schnorr.rs
doxa-client/src/plonky2_gadgets/: merkle.rs  mod.rs  serialization.rs  u256.rs  witness.rs
doxa-e2e/: Cargo.toml
doxa-e2e/tests/: e2e_setup_and_freshacc.rs
doxa-state-sync/: AGENTS.md  Cargo.toml  README.md
doxa-state-sync/src/: api.rs  constants.rs  contract.rs  lib.rs  main.rs  state.rs  sync.rs
doxa-state-sync/tests/: integration.rs
doxa-state-sync/tests/common/: mod.rs
doxa-subpool-database/: .env.example  Cargo.toml  README.md  spec.md
doxa-subpool-database/src/: config.rs  convert.rs  db.rs  error.rs  main.rs  state.rs
doxa-subpool-database/src/routes/: admin.rs  deposit.rs  freshacc.rs  mod.rs  register.rs  spend_tx.rs
doxa-subpool-database/src/types/: deposit.rs  spend_tx.rs
doxa-subpool-operator/: .env.example  Cargo.toml  README.md
doxa-subpool-operator/src/: deposits.rs  main.rs  operator.rs  spend_txs.rs
tessera-client/: Cargo.toml
tessera-client/src/: account.rs  commitment.rs  ecgfp5.rs  lib.rs  note.rs  pool_config.rs  schnorr.rs  tree.rs  utils.rs
tessera-client/src/p2/: merkle.rs  mod.rs  signature.rs  u256.rs
tessera-client/src/plonky2_gadgets/: merkle.rs  mod.rs  serialization.rs  signature.rs  u256.rs  witness.rs
tessera-demo/: .gitignore  Cargo.toml  README.md
tessera-demo/ec2/: .env.example  DEPLOYMENT.md  README.md  deploy.sh  docker-compose.prod.yml  ec2_setup.sh  services.prod.env.example  services_db.sh  services_start.sh  services_status.sh  services_stop.sh
tessera-demo/ec2/docker/: Dockerfile.operator  Dockerfile.sequencer  Dockerfile.subpool-db
tessera-demo/ec2/nginx/: tessera.conf  tessera.conf.template
tessera-demo/scripts/: SERVICES.md  deploy_backend_nginx.sh  services.env.example  services_db.sh  services_start.sh  services_status.sh  services_stop.sh
tessera-demo/src/: lib.rs  main.rs  sequencer.rs
tessera-demo/src/sequencer/: batches.rs  config.rs  handlers.rs  helpers.rs  mod.rs  state.rs
tessera-e2e/: Cargo.toml  README.md
tessera-e2e/src/: client_state.rs  contract_bytecodes.rs  lib.rs  prover_adapter.rs
tessera-e2e/tests/: deposit_groth16.rs  deposit_plonky2.rs  e2e_real_proofs.rs  e2e_setup_and_freshacc.rs  freshacc_groth16.rs  freshacc_plonky2.rs  prover_service.rs  spend_groth16.rs  spend_plonky2.rs  state_service.rs
tessera-e2e/tests/common/: mod.rs
tessera-server/: .env  AGENTS.md  Cargo.toml  README.md
tessera-server/examples/: genesis_root.rs  groth16_wrapper.rs
tessera-server/src/: batch_helper.rs  config.rs  contract.rs  dummy.rs  lib.rs  prover.rs  prover_client.rs  prover_v2.rs  sequencer.rs  state.rs  types.rs
tessera-server/src/aggregation_pipeline/: mod.rs  pool.rs  session.rs  types.rs
tessera-server/src/aggregator_service/: bn128_wrapper_service.rs  bridge_tx_aggregator.rs  mod.rs  priv_tx_aggregator.rs  utils.rs
tessera-server/src/data_types/: account_state.rs  deposit.rs  mod.rs  note_commitment.rs  private_tx.rs  withdrawal_tx.rs
tessera-server/src/deposits/: deposit.rs  mod.rs
tessera-server/src/groth/: mod.rs  serializer.rs  wrapper.rs
tessera-server/src/pending_deposits/: batch.rs  batch_ready.rs  deposit.rs  mod.rs  tree.rs
tessera-server/src/proof_aggregation/: artifacts.rs  deposit_super_aggregator_v2.rs  generic.rs  mod.rs  node_prover.rs  subtree_root.rs  super_aggregator_v2.rs  tx_super_aggregator_v2.rs
tessera-server/src/prover_service/: aggregator.rs  config.rs  handle.rs  mod.rs  service.rs  subtree_root.rs
tessera-server/src/sequencer/: api.rs  batch.rs  bn128_wrapper_service.rs  handle.rs  mod.rs  pipeline.rs  recovery.rs  revert.rs  testing.rs
tessera-server/src/state_service/: config.rs  handle.rs  mod.rs  service.rs  state.rs  sync.rs
tessera-server/src/states/: commitment_state.rs  mod.rs  nullifier_state.rs
tessera-server/src/tree_store/: mod.rs
tessera-server/tests/: e2e_v2.rs  integration_scripts.rs  real_proof_pipeline.rs
tessera-state-sync/: AGENTS.md  Cargo.toml  README.md
tessera-state-sync/src/: api.rs  constants.rs  contract.rs  lib.rs  main.rs  state.rs  sync.rs
tessera-state-sync/tests/: integration.rs
tessera-state-sync/tests/common/: mod.rs
tessera-subpool-database/: .env.example  Cargo.toml  README.md  spec.md
tessera-subpool-database/migrations/: 0001_initial.sql  0002_deposit_tx_requests.sql  0002_spend_tx.sql  0003_faucet_requests.sql  0003_freshacc_extra_columns.sql  0004_defer_account_creation.sql  0004_input_note_pending.sql
tessera-subpool-database/src/: config.rs  convert.rs  db.rs  error.rs  lib.rs  main.rs  state.rs
tessera-subpool-database/src/routes/: account.rs  admin.rs  deposit.rs  faucet.rs  freshacc.rs  input_notes.rs  mod.rs  notes_balance.rs  register.rs  spend_tx.rs  user.rs  withdrawal_tx.rs
tessera-subpool-database/src/types/: account.rs  deposit.rs  freshacc.rs  mod.rs  spend_tx.rs  user.rs  withdrawal_tx.rs
tessera-subpool-operator/: .env.example  CODE_REVIEW.md  Cargo.toml  README.md
tessera-subpool-operator/src/: config.rs  convert.rs  deposits.rs  main.rs  operator.rs  spend_txs.rs
tessera-trees/: Cargo.toml  build.rs  go.mod  go.sum  prover.go
tessera-trees/examples/: bench_sha256_4096_timing.rs  groth16_wrapper.rs  poseidon_test_vectors.rs
tessera-trees/ffi/: main.go
tessera-trees/src/: lib.rs  merkle_proof.rs  tree.rs  verification.rs
tessera-trees/src/commitment_tree/: mod.rs  tree.rs
tessera-trees/src/groth/: mod.rs  serializer.rs  wrapper.rs
tessera-trees/src/plonky2_gadgets/: mod.rs
tessera-trees/src/proof_aggregation/: generic.rs  mod.rs  node_prover.rs  (+3 more)
tessera-utils/: Cargo.toml  README.md  build.rs  prover.go
tessera-utils/ffi/: main.go
tessera-utils/src/: hasher.rs  lib.rs
wasm/tessera-client-wasm/: Cargo.toml
(+436 files in other folders)
