[workspace]
members = ["tessera-client","tessera-server", "tessera-trees"]
resolver = "2"

[workspace.dependencies]
tessera-trees = {path = "tessera-trees"}
tessera-client = {path = "tessera-client"}
anyhow = "1.0.102"
rand_chacha = "0.10.0"
rand = "0.10.0"
serde = "1.0.228"
serde_json = "1.0.149"
sha2 = "0.10.9"
sha3 = "0.10.8"
digest = "0.11.0"
hex = "0.4.3"
plonky2 = { git = "https://github.com/phantomzone-org/plonky2.git" }
plonky2_field = { git = "https://github.com/phantomzone-org/plonky2.git" }
starky = { git = "https://github.com/phantomzone-org/plonky2.git" }
tokio = { version = "1", features = ["full"] }
alloy = { version = "1.7.3", features = ["full", "node-bindings"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
axum = "0.8.8"
itertools = "0.14.0"
primitive-types = "0.14.0"
