[workspace]
members = ["tessera-client","tessera-server", "tessera-trees", "tessera-e2e", "wasm/tessera-client-wasm"]
resolver = "2"

[workspace.dependencies]
tessera-trees = {path = "tessera-trees"}
tessera-client = {path = "tessera-client"}
tessera-server = {path = "tessera-server"}
tessera-utils = {path = "tessera-utils"}
anyhow = "1.0.102"
rand_chacha = "0.10.0"
rand = "0.10.0"
serde = "1.0.228"
serde_json = "1.0.149"
sha2 = "0.10.9"
sha3 = "0.10.8"
digest = "0.10.7"
hex = "0.4.3"
plonky2 = { git = "https://github.com/phantomzone-org/plonky2.git" }
plonky2_field = { git = "https://github.com/phantomzone-org/plonky2.git" }
starky = { git = "https://github.com/phantomzone-org/plonky2.git" }
tokio = { version = "1", features = ["full"] }
alloy = { version = "1.7.3", features = ["full", "node-bindings"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
axum = "0.8.8"
itertools = "0.14.0"
primitive-types = "0.14.0"
tiny-keccak = { version = "2.0", features = ["keccak"] }
hashbrown = "0.14"

# Uncomment to use local plonky2 checkout instead of git (for debugging).
# [patch."https://github.com/phantomzone-org/plonky2.git"]
# plonky2       = { path = "/home/janmjaya/Desktop/plonky2/plonky2/plonky2" }
# plonky2_field = { path = "/home/janmjaya/Desktop/plonky2/plonky2/field" }
# starky        = { path = "/home/janmjaya/Desktop/plonky2/plonky2/starky" }
