[workspace]
members = ["doxa-client","doxa-server", "doxa-trees", "doxa-e2e", "doxa-subpool-database", "doxa-subpool-operator", "doxa-state-sync"]
resolver = "2"

[workspace.dependencies]
doxa-trees = { path = "doxa-trees" }
doxa-client = { path = "doxa-client" }
doxa-server = { path = "doxa-server" }
doxa-utils = { path = "doxa-utils" }
doxa-subpool-database = { path = "doxa-subpool-database" }
anyhow = "1.0.102"
rand_chacha = "0.10.0"
rand = "0.10.0"
serde = "1.0.228"
serde_json = "1.0.149"
sha2 = "0.10.9"
sha3 = "0.10.8"
digest = "0.10.7"
hex = "0.4.3"
plonky2 = { git = "https://github.com/phantomzone-org/plonky2.git" }
plonky2_field = { git = "https://github.com/phantomzone-org/plonky2.git" }
starky = { git = "https://github.com/phantomzone-org/plonky2.git" }
tokio = { version = "1", features = ["full"] }
alloy = { version = "1.7.3", features = ["full", "node-bindings"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
axum = "0.8.8"
itertools = "0.14.0"
primitive-types = "0.14.0"
tiny-keccak = { version = "2.0", features = ["keccak"] }
hashbrown = "0.14"
sqlx   = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "macros", "migrate", "json", "chrono"] }
chrono     = { version = "0.4", features = ["serde"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Uncomment to use local plonky2 checkout instead of git (for debugging).
# [patch."https://github.com/phantomzone-org/plonky2.git"]
# plonky2       = { path = "/home/janmjaya/Desktop/plonky2/plonky2/plonky2" }
# plonky2_field = { path = "/home/janmjaya/Desktop/plonky2/plonky2/field" }
# starky        = { path = "/home/janmjaya/Desktop/plonky2/plonky2/starky" }
