[package]
name = "doxa-client"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
plonky2_field = {workspace = true}
plonky2 = {workspace = true}
anyhow = {workspace = true}
rand = {workspace = true}
rand_chacha = {workspace = true}
itertools = {workspace = true}
doxa-trees = {workspace = true}
doxa-utils = {workspace = true}
primitive-types = {workspace = true}
digest = {workspace = true}
serde = {workspace = true}
hex = {workspace = true}
