[package]
name    = "doxa-subpool-database"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "doxa-subpool-database"
path = "src/main.rs"

[dependencies]
doxa-client     = { workspace = true }
doxa-utils      = { workspace = true }
anyhow             = { workspace = true }
serde              = { workspace = true, features = ["derive"] }
serde_json         = { workspace = true }
tokio              = { workspace = true }
axum               = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy            = { workspace = true }
hex                = { workspace = true }
primitive-types    = { workspace = true }
plonky2_field      = { workspace = true }
sqlx               = { workspace = true }
chrono             = { workspace = true }
tower-http         = { workspace = true }
alloy              = { workspace = true }
