[package]
name        = "doxa-subpool-operator"
version     = "0.1.0"
edition     = "2021"
license     = "MIT OR Apache-2.0"
default-run = "doxa-subpool-operator"

[[bin]]
name = "doxa-subpool-operator"
path = "src/main.rs"

[[bin]]
name = "test-e2e"
path = "src/bin/test_e2e.rs"

[dependencies]
doxa-client = { workspace = true }
doxa-utils  = { workspace = true }
doxa-subpool-database = { workspace = true }
anyhow         = { workspace = true }
serde          = { workspace = true, features = ["derive"] }
serde_json     = { workspace = true }
tokio          = { workspace = true }
tracing        = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy        = { workspace = true }
hex            = { workspace = true }
plonky2_field  = { workspace = true }
sqlx           = { workspace = true }
chrono         = { workspace = true }
rand           = { workspace = true }
rand_chacha    = { workspace = true }
alloy          = { workspace = true }
primitive-types = { workspace = true }
reqwest        = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
