[package]
name = "tessera-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
tessera-server = { workspace = true }
tessera-client = { workspace = true }
tessera-trees = { workspace = true }
tessera-utils = { workspace = true }
plonky2 = { workspace = true }
alloy = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[[bin]]
name = "demo-sequencer"
path = "src/main.rs"
