[package]
name = "tessera-server"
version = "0.1.0"
edition = "2021"

[features]
# WARNING: enables a trivially-bypassable proof-verification stub.
# Never enable in production builds.
insecure-stub-proof-verify = []
# Enables heavy end-to-end integration tests that orchestrate local devnet scripts.
integration-tests = []

[dependencies]
tessera-trees = {workspace = true}
tessera-utils = {workspace = true}
tessera-client = {workspace = true}
rand = {workspace = true}
plonky2 = {workspace = true}
anyhow = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
sha2 = {workspace = true}
sha3 = {workspace = true}
hex = {workspace = true}
digest = {workspace = true}
tokio = {workspace = true}
alloy = {workspace = true}
tracing = {workspace = true}
rand_chacha = {workspace = true}
axum = {workspace = true}
bincode = "1.3"
crc32fast = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
async-trait = "0.1"
num = "0.4.3"
log = "0.4"
clap = { version = "4", features = ["derive"] }

[dependencies.tracing-subscriber]
workspace = true

[dependencies.dotenvy]
workspace = true

[[bin]]
name = "sequencer"
path = "src/bin/sequencer.rs"

[[bin]]
name = "aggregation_prover"
path = "src/bin/aggregation_prover.rs"


