[package]
name = "tessera-state-sync"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tessera-state-sync"
path = "src/main.rs"

[lib]
name = "tessera_state_sync"
path = "src/lib.rs"

[dependencies]
tessera-trees = {workspace = true}
tessera-utils = {workspace = true}
tessera-client = {workspace = true}
anyhow = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
hex = {workspace = true}
tokio = {workspace = true}
alloy = {workspace = true}
tracing = {workspace = true}
tracing-subscriber = {workspace = true}
dotenvy = {workspace = true}
axum = {workspace = true}
tower-http = {workspace = true}
hashbrown = {workspace = true}
itertools = {workspace = true}
primitive-types = {workspace = true}
plonky2 = {workspace = true}
plonky2_field = {workspace = true}