[package]
name    = "tessera-subpool-database"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tessera-subpool-database"
path = "src/main.rs"

[dependencies]
tessera-client     = { workspace = true }
tessera-utils      = { workspace = true }
anyhow             = { workspace = true }
serde              = { workspace = true, features = ["derive"] }
serde_json         = { workspace = true }
tokio              = { workspace = true }
axum               = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy            = { workspace = true }
hex                = { workspace = true }
primitive-types    = { workspace = true }
plonky2_field      = { workspace = true }
sqlx               = { workspace = true }
chrono             = { workspace = true }
tower-http         = { workspace = true }
