[package]
name    = "tessera-subpool-operator"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tessera-subpool-operator"
path = "src/main.rs"

[dependencies]
tessera-client = { workspace = true }
tessera-utils  = { workspace = true }
tessera-subpool-database = { path = "../tessera-subpool-database" }
anyhow         = { workspace = true }
serde          = { workspace = true, features = ["derive"] }
serde_json     = { workspace = true }
tokio          = { workspace = true }
tracing        = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy        = { workspace = true }
hex            = { workspace = true }
plonky2_field  = { workspace = true }
sqlx           = { workspace = true }
chrono         = { workspace = true }
rand           = { workspace = true }
rand_chacha    = { workspace = true }
reqwest        = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
