[package]
name        = "tessera-subpool-operator"
version     = "0.1.0"
edition     = "2021"
default-run = "tessera-subpool-operator"

[[bin]]
name = "tessera-subpool-operator"
path = "src/main.rs"

[[bin]]
name = "test-deposit"
path = "src/bin/test_deposit.rs"

[[bin]]
name = "test-e2e"
path = "src/bin/test_e2e.rs"

[dependencies]
tessera-client = { workspace = true }
tessera-utils  = { workspace = true }
tessera-subpool-database = { path = "../tessera-subpool-database" }
anyhow         = { workspace = true }
serde          = { workspace = true, features = ["derive"] }
serde_json     = { workspace = true }
tokio          = { workspace = true }
tracing        = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy        = { workspace = true }
hex            = { workspace = true }
plonky2_field  = { workspace = true }
sqlx           = { workspace = true }
chrono         = { workspace = true }
rand           = { workspace = true }
rand_chacha    = { workspace = true }
alloy          = { workspace = true }
primitive-types = { workspace = true }
reqwest        = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
