[package]
name = "tessera-trees"
version = "0.1.0"
edition = "2024"

[build-dependencies]
bindgen = "*"

[dependencies]
rand_chacha = {workspace = true}
rand = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
anyhow = {workspace = true}
itertools = "0.14.0"
num = "0.4.3"
hex = {workspace = true}
plonky2 = {workspace = true}
rayon = "1.10"
num_cpus = "1.16"
log = "0.4"

# dependencies for the wrapper
ff = { package = "ff", version = "0.13", features = ["derive"] }
num-bigint = { version = "0.4", features = ["rand"] }
lazy_static = "1.4.0"
sha2          = {workspace = true}

[dev-dependencies]
criterion = "0.8.2"
proptest = "1.10.0"


