[package]
name = "tessera-utils"
version = "0.1.0"
edition = "2024"

[build-dependencies]
bindgen = "*"

[dependencies]
plonky2 = {workspace = true}
starky = {workspace = true}
anyhow = {workspace = true}
rand = {workspace = true}
tiny-keccak = {workspace = true}
hashbrown = {workspace = true}
itertools = {workspace = true}
log = "0.4"
ff = { package = "ff", version = "0.13", features = ["derive"] }
num-bigint = { version = "0.4", features = ["rand"] }
num = "0.4.3"
lazy_static = "1.4.0"
serde = {workspace = true}
serde_json = {workspace = true}

[dev-dependencies]
env_logger = "0.11"
