[package]
name = "tessera-client-wasm"
version = "0.1.0"
authors = ["Janmajaya Mall <janmajayamall@protonmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
console_error_panic_hook = { version = "0.1.7", optional = true }

tessera-client = { path = "../../tessera-client" }
primitive-types = { workspace = true }
# tessera-trees = { path = "../../tessera-trees" }
plonky2_field = { workspace = true }

# rand needs getrandom with wasm_js feature to source entropy in the browser
getrandom = { version = "0.4", features = ["wasm_js"] }
rand = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "s"
